# Alynxis

./: Cargo.toml  LICENSE  README.md
crates/alynxis-bin/: Cargo.toml
crates/alynxis-bin/src/: main.rs
crates/alynxis-core/: Cargo.toml  build.rs
crates/alynxis-core/src/: config.rs  error.rs  ids.rs  lib.rs  logging.rs
crates/alynxis-core/src/core/: admin.rs  harm_check.rs  mod.rs  zones.rs
crates/alynxis-memory/: Cargo.toml
crates/alynxis-memory/src/: episode.rs  error.rs  lib.rs  memory_store.rs  procedural.rs  storage.rs  tiers.rs
crates/alynxis-values/: Cargo.toml
crates/alynxis-values/src/: error.rs  lib.rs  registry.rs  value.rs  wellbeing.rs
crates/alynxis-worldmodel/: Cargo.toml
crates/alynxis-worldmodel/src/: confidence.rs  edge.rs  error.rs  index.rs  ingestion.rs  lib.rs  node.rs  spatial.rs  storage.rs  worldmodel.rs
