[package]
name = "alynxis-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Alynxis Part 3: Memory Systems — episodic/procedural/cold tiers behind a unified facade, objective timestamp logging."

[dependencies]
alynxis-core = { path = "../alynxis-core" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
