[package]
name = "alynxis-values"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Alynxis Part 4: Value System — seed values, satisfaction tracking, weight evolution, the wellbeing_of_others floor, and the self-improvement ceiling."

[dependencies]
alynxis-core = { path = "../alynxis-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
